docs: finalize English rewrite and doc cleanup